--- a/app/globals.css
+++ b/app/globals.css
@@ -301,6 +301,16 @@ a {
   aspect-ratio: 1;
   background-image: url(/img/background.svg);
   background-size: 100% 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.desktop .profile-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px;
 }
 
 .desktop .div-2 {
@@ -352,12 +362,12 @@ a {
   display: flex;
   flex-wrap: wrap;
   max-width: 1520px;
-  height: 1050px;
   align-items: center;
   justify-content: center;
   gap: 20px 20px;
   position: relative;
   width: 100%;
+  flex: 0 0 auto;
 }
 
 .desktop .project-card {
@@ -469,18 +479,12 @@ a {
 .desktop .project-description {
   position: relative;
   align-self: stretch;
-  height: 69px;
   font-family: "Manrope-SemiBold", Helvetica;
   font-weight: 600;
   color: #1e2a38;
   font-size: 16px;
   letter-spacing: 0;
   line-height: normal;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
 }
 
 .desktop .frame-5 {
